--- a/callback/index.html
+++ b/callback/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>My Web Page</title>
+    <title>Authentication Callback</title>
 
         <script
     crossorigin="anonymous"
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a simple web page created as an example.</p>
+    <h1>Authentication Callback</h1>
+    <p>You have been redirected here after authentication. You can now close this window and return to the main application.</p>
 </body>
 </html>
