--- a/callback/index.html
+++ b/callback/index.html
@@ -1,38 +1,12 @@
-<html>
-
-<head>
-    <title>Authentication Callback</title>
-
-        <script
-    crossorigin="anonymous"
-    type="application/javascript"
-    src="https://cdn.jsdelivr.net/npm/@qlik/embed-web-components@1/dist/index.min.js"
-    data-host="<QLIK_TENANT_URL>"
-    data-client-id="<QLIK_OAUTH2_CLIENT_ID>"
-    data-redirect-uri="<WEB_APP_CALLBACK_URI>"
-    data-access-token-storage="session"
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <script
+      crossorigin="anonymous"
+      type="application/javascript"
+      data-host="https://qontrolbi.eu.qlikcloud.com/"
+      src="https://cdn.jsdelivr.net/npm/@qlik/api@2/oauth-callback.iife.js"
     ></script>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        p {
-            color: #666;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>Authentication Callback</h1>
-    <p>You have been redirected here after authentication. You can now close this window and return to the main application.</p>
-</body>
+  </head>
 </html>
