--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <title>qlik-embed demo</title>
 
-        <script
-    crossorigin="anonymous"
-    type="application/javascript"
-    src="https://cdn.jsdelivr.net/npm/@qlik/embed-web-components@1/dist/index.min.js"
-    data-host="https://qontrolbi.eu.qlikcloud.com/"
-    data-client-id="019c4746c8c3c10ca026daceaab5f26e"
-    data-redirect-uri="https://albinkempe.github.io/qlik/callback/"
-    data-access-token-storage="session"
-    ></script>
+    <script crossorigin="anonymous" type="application/javascript"
+        src="https://cdn.jsdelivr.net/npm/@qlik/embed-web-components@1/dist/index.min.js"
+        data-host="https://qontrolbi.eu.qlikcloud.com/" data-client-id="019c4746c8c3c10ca026daceaab5f26e"
+        data-redirect-uri="https://albinkempe.github.io/qlik/callback/" data-access-token-storage="session"></script>
 
     <style>
         body {
@@ -32,9 +27,8 @@
             flex-direction: column;
         }
 
-        embed {
-            display: block;
-            margin-top: 20px;
+        .visualization {
+            height: 80%;
             width: 80%;
             border-radius: 8px;
         }
@@ -44,17 +38,11 @@
 <body>
     <h1>qlik-embed demo</h1>
     <main>
-        <qlik-embed
-        ui="analytics/chart"
-        app-id="35e38b87-bc9f-4ed4-9d9d-501d5652310f"
-        object-id="BQTm"
-        class="embed"
-        ></qlik-embed>
+        <div class="visualization">
+            <qlik-embed ui="analytics/chart" app-id="35e38b87-bc9f-4ed4-9d9d-501d5652310f"
+                object-id="BQTm"></qlik-embed>
+        </div>
     </main>
-
-
-    
-
-
 </body>
+
 </html>
