Added gap between flexbox elements

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            gap: 20px;
             height: 80%;
+            width: 100%;
         }
 
         .visualization {
             height: 80%;
             width: 80%;
-            border-radius: 8px;
         }
     </style>
 </head>
